# rift

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LLM.md  Makefile  README.md  RIFT.md  ROADMAP.md  TODO.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/review-rift/: SKILL.md
.github/workflows/: main.yml
crates/petal/: Cargo.toml
crates/petal/src/: lib.rs
crates/petal_mcp/: Cargo.toml
crates/petal_mcp/src/: main.rs
crates/rift_ai/: Cargo.toml
crates/rift_ai/src/: main.rs
crates/rift_ai/src/whisper/: mod.rs
crates/rift_core/: Cargo.toml
crates/rift_core/modules/: init.rsl  state.rsl
crates/rift_core/modules/agent/: modes.rsl  prompts.rsl  tools.rsl
crates/rift_core/modules/ui/: agent.rsl  command_dispatcher.rsl  dashboard.rsl  dialog_modal.rsl  file_explorer.rsl  find_file.rsl  go_to_definition.rsl  go_to_references.rsl  info_modal.rsl  switch_buffer.rsl  utils.rsl  workspace_diagnostics.rsl  workspace_search.rsl
crates/rift_core/src/: actions.rs  audio.rs  cli.rs  keybinds.rs  lib.rs  logging.rs  preferences.rs  rendering.rs  rpc.rs  rsl.rs  state.rs
crates/rift_core/src/actions/: audio_actions.rs  buffer.rs  clipboard.rs  cursor.rs  edit.rs  lsp_actions.rs  mod.rs  search.rs
crates/rift_core/src/ai/: SYSTEM.md  mod.rs  tool_calling.rs
crates/rift_core/src/ai/prompts/: AGENTIC_CODING.md  SYSTEM.md
crates/rift_core/src/buffer/: highlight.rs  instance.rs  line_buffer.rs  mod.rs  rope_buffer.rs  rope_buffer_tests.rs
crates/rift_core/src/concurrent/: cli.rs  mod.rs  web_api.rs
crates/rift_core/src/io/: file_io.rs
crates/rift_core/src/lsp/: client.rs  mod.rs
crates/rift_core/src/lsp/types/: mod.rs
crates/rift_core/src/themes/: kanagawa.rs  onedark.rs
crates/rift_egui/: Cargo.toml
crates/rift_egui/src/: app.rs  command_dispatcher.rs  fonts.rs  main.rs
crates/rift_egui/src/components/: ai_panel.rs  completion_menu.rs  diagnostics_overlay.rs  file_explorer.rs  info_modal.rs  menu_bar.rs  mod.rs  signature_information.rs  status_line.rs
crates/rift_highlight/: Cargo.toml
crates/rift_io/: Cargo.toml
crates/rift_ipc/: Cargo.toml
crates/rift_ipc/src/: lib.rs
crates/rift_rpc/: Cargo.toml
crates/rift_rpc/src/: lib.rs
crates/rift_server/: Cargo.toml
crates/rift_server/src/: main.rs  message.rs  server.rs
crates/rift_tui/: Cargo.toml
crates/rift_tui/src/: app.rs  main.rs  util.rs
crates/rift_web/: Cargo.toml  index.html
crates/rift_web/assets/: sw.js
crates/rift_web/src/: app.rs  command_dispatcher.rs  main.rs
crates/rsl/: Cargo.toml
crates/rsl/examples/: json.rsl  lib.rsl  sample.json  simple.rsl  test.rsl
crates/rsl/src/: array.rs  environment.rs  errors.rs  expression.rs  interpreter.rs  lib.rs  main.rs  operator.rs  parser.rs  primitive.rs  scanner.rs  statement.rs  table.rs  token.rs
crates/rsl/src/expression/: binary.rs  call.rs  mod.rs  rpc.rs
crates/rsl/src/std_lib/: array.rs  io.rs  mod.rs  number.rs  string.rs  table.rs  web_requests.rs
crates/rsl/tests/: integration.rs  native_registry.rs
crates/rsl/tests/scripts/: 00_comments.rsl  01_data_types.rsl  02_arithmetic.rsl  03_comparison_and_equality.rsl  04_logical_operators.rsl  05_operator_precedence.rsl  06_variables_and_scoping.rsl  07_strings.rsl  08_control_flow.rsl  09_functions.rsl  10_arrays.rsl  11_tables.rsl  12_json_and_utilities.rsl  TEST_INDEX.md  arithmetic.rsl  variables_and_functions.rsl
crates/rsl_macros/: Cargo.toml
crates/rsl_macros/src/: lib.rs
docs/: architecture.md  build-from-source.md  petal.md  rsl-quickstart.md
rift_core/: Cargo.toml
rift_core/src/: actions.rs  cli.rs  keybinds.rs  lib.rs  preferences.rs  rendering.rs  state.rs
rift_core/src/ai/: mod.rs
rift_core/src/buffer/: instance.rs  line_buffer.rs  mod.rs
rift_core/src/concurrent/: cli.rs  mod.rs  web_api.rs
rift_core/src/io/: file_io.rs
rift_core/src/lsp/: client.rs  mod.rs
rift_core/src/lsp/types/: base.rs  mod.rs
rift_core/src/themes/: catppuccin_mocha.rs  mod.rs
rift_egui/: Cargo.toml
rift_egui/src/: app.rs  command_dispatcher.rs  fonts.rs  main.rs
rift_egui/src/components/: ai_panel.rs  completion_menu.rs  diagnostics_overlay.rs  file_explorer.rs  info_modal.rs  menu_bar.rs  mod.rs  signature_information.rs  status_line.rs
rift_explorer/: Cargo.toml
rift_explorer/src/buffer/: highlight.rs  line_buffer.rs  mod.rs
rift_generator/: Cargo.toml
rift_generator/src/io/: file_handling.rs  mod.rs
rift_tauri/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
rift_tauri/src/: App.vue
rift_tauri/src-tauri/: Cargo.toml  tauri.conf.json
rift_tauri/src-tauri/src/: command.rs  commands.rs  main.rs
rift_tauri/src/assets/: main.css
rift_tauri/src/components/: CommandDispatcher.vue  EditorPanel.vue  StatusBar.vue
rift_tauri/src/stores/: settings.ts  workspace.ts
rift_tui/: Cargo.toml
rift_tui/src/: app.rs  cli.rs  main.rs
static/: client.js  index.html  styles.css
