[workspace]
resolver = "3"

members = [
  "crates/rift_core",
  "crates/rift_tui",
  "crates/rift_egui",
  "crates/rsl",
  "crates/rsl_macros",
  "crates/rift_rpc",
]

[workspace.package]
version = "1.0.23"
edition = "2024"
license = "MIT"
repository = "https://github.com/satwik-kambham/rift"
authors = ["Satwik Kambham"]
publish = false

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0.17"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
  "charset",
  "macos-system-configuration",
  "rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.1", features = ["derive"] }
tarpc = { version = "0.37", features = ["full"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
include_dir = "0.7.4"

[workspace.metadata.crane]
name = "rift-workspace"
