[package]
name = "rift_core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.23.0"
tree-sitter-highlight = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-rust = "0.23.0"
tree-sitter-md = "0.3.2"
ecolor = "0.31.1"
tokio = { version = "1.41.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1.41"
copypasta = "0.10.1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5.23", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
which = "7.0.2"
