[package]
name = "rift_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
rift_core = { path = "../rift_core" }
font-kit = "0.14.2"
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
strum = "0.27.1"
egui_extras = { version = "0.29.1", features = ["svg"] }
