[package]
name = "rift_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
rift_core = { path = "../rift_core" }
anyhow = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
