[package]
name = "rift_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
rand = "0.9.1"
tokenizers = "0.21.1"
symphonia = "0.5.4"
candle-transformers = "0.9.1"
byteorder = "1.5.0"
