[package]
name = "rift_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart", "ws"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3.31"
