[package]
name = "rift_core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.23.0"
tree-sitter-highlight = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-rust = "0.23.0"
tree-sitter-md = "0.3.2"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-nix = { git = "https://github.com/nix-community/tree-sitter-nix.git", branch = "master" }
tree-sitter-dart = { git = "https://github.com/satwik-kambham/tree-sitter-dart.git", branch = "master" }
ecolor = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "ecolor" }
tokio = { version = "1.41.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1.41"
copypasta = "0.10.1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5.23", features = ["derive"] }
strum = "0.27.1"
notify = "8.0.0"
strum_macros = "0.27.1"
which = "7.0.2"
chrono = "0.4.41"
