[package]
name = "rift_core"
version.workspace = true
edition.workspace = true

[build-dependencies]
cc="*"

[dependencies]
rsl = { path = "../rsl", features = ["rift_rpc"] }
rift_rpc = { path = "../rift_rpc" }

tarpc = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }
copypasta = "0.10.1"
notify = "8.0.0"
which = "7.0.2"
ropey = "1.6.1"
ecolor = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "ecolor" }

tree-sitter = "0.23.0"
tree-sitter-highlight = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-rust = "0.23.0"
tree-sitter-md = "0.3.2"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-c = "0.23.2"
tree-sitter-cpp = "0.23.2"
tree-sitter-nix = { git = "https://github.com/nix-community/tree-sitter-nix.git", branch = "master" }
tree-sitter-dart = { git = "https://github.com/satwik-kambham/tree-sitter-dart.git", branch = "master" }
