[package]
name = "rift_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
rift_core = { path = "../rift_core" }
eframe = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "eframe" }
egui = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "egui" }
egui_extras = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "egui_extras", features = ["svg"] }
font-kit = "0.14.2"
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
strum = "0.27.1"
dirs = "6.0.0"
