[package]
name = "rift_egui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "re"
path = "src/main.rs"

[dependencies]
rift_core = { path = "../rift_core" }
eframe = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "eframe" }
egui = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "egui" }
egui_extras = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "egui_extras", features = ["svg"] }
font-kit = "0.14.2"
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
dirs = { workspace = true }
