[package]
name = "rift_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rift_core = { path = "../rift_core" }
anyhow = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
axum = { version = "0.8.7", features = ["ws"] }
bincode = "2.0.1"
bytes = "1.11.0"
futures = "0.3.31"
