[package]
name = "rift_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rift_core = { path = "../rift_core" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
axum = { version = "0.8.7", features = ["ws"] }
bincode = { workspace = true }
bytes = "1.11.0"
futures = { workspace = true }
