[package]
name = "rift_server"
version.workspace = true
edition.workspace = true

[dependencies]
rift_core = { path = "../rift_core" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8.7", features = ["ws"] }
bincode = { workspace = true }
bytes = "1.11.0"
futures = { workspace = true }
tower-http = { version = "0.6.8", features = ["fs"] }
