[package]
name = "rift_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
rift_core = { path = "../rift_core" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
strum = { workspace = true }
dirs = { workspace = true }
