[package]
name = "rift_tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
rift_core = { path = "../rift_core" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
dirs = { workspace = true }
