[package]
name = "rift_tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
rift_core = { path = "../rift_core" }
ratatui = "0.29.0"
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
