[package]
name = "rift_web"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "egui" }
eframe = { git = "https://github.com/satwik-kambham/egui.git", branch = "master", package = "eframe", default-features = false, features = [
    "default_fonts",
    "glow",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.54"
web-sys = "0.3.81"
