[package]
name = "rsl"
version.workspace = true
edition.workspace = true

[features]
default = []
rift_rpc = ["dep:rift_rpc", "tarpc", "futures"]

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reedline = "0.41.0"
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { workspace = true }
rift_rpc = { path = "../rift_rpc", optional = true }
tarpc = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["rc"] }
unescaper = "0.1.6"
unicode-width = "0.2.0"
which = "7.0.2"
